--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+            android:id="@+id/topbar_label"
             android:text="@string/app_name"
             android:textColor="@color/white"
             android:textSize="25sp"/>
