--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <!-- 灰色系 -->
     <color name="dark_grey">#636362</color>
     <color name="grey">#a1a1a1</color>
+    <color name="alp_grey">#88a1a1a1</color>
+    <color name="deep_alp_grey">#33a1a1a1</color>
     <color name="grey2">#dedede</color>
     <color name="light_grey">#999999</color>
     <color name="bright_grey">#929292</color>
@@ -18,8 +20,8 @@
     <color name="gray">#808080</color>
     <!--灰色 -->
     <color name="dim_gray">#696969</color>
-    <color name="light_black">#444444</color>
     <!--暗灰色 -->
+    <color name="light_black">#444444</color>
     <color name="black">#000000</color>
     <!--黑色 -->
     <color name="half_transparent">#a0000000</color>
