--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@mipmap/ico"
+            android:src="@mipmap/ico"
             android:scaleType="fitCenter"/>
 
         <TextView
